infra/local_dev/wave/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wave-postgres-service
spec:
  type: NodePort
  selector:
    app: wave-postgresql
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5432
      targetPort: 5432
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30432
