infra/local_dev/wave/wave.deploy.tmpl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wave-lv-example
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: wave-lv-example
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: wave-lv-example
    spec:
      containers:
        - name: wave-lv-example
          image: haakco/stage3-ubuntu-20.04-php7.4-lv
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/site
              name: wave-volume
      volumes:
        - name: wave-volume
          hostPath:
            path: $WAVE_DIR
---
apiVersion: v1
kind: Service
metadata:
  name: wave-lv-example
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wave-lv-example
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wave-lv-example
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-traefik-compress@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-regex: "^https://www.$DOMAIN/(.*)"
    traefik.ingress.kubernetes.io/redirect-replacement: "https://$DOMAIN/$1"
spec:
  tls:
    - hosts:
        - $DOMAIN
        - www.$DOMAIN
      secretName: wave-cert-tls
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wave-lv-example
                port:
                  number: 80
    - host: www.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wave-lv-example
                port:
                  number: 80
