infra/local_dev/wave/wave.deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wave-lv-example
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: wave-lv-example
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: wave-lv-example
    spec:
      containers:
        - name: wave-lv-example
          image: haakco/stage3-ubuntu-20.04-php7.4-lv
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/site
              name: wave-volume
      volumes:
        - name: wave-volume
          hostPath:
            path: /Volumes/Dev/HaakCo/Talks/the-different-stages-to-learning-how-to-deploy-a-laravel-application/Stage_4/infra/local_dev/stage3-ubuntu-20.04-php7.4-lv-wave
---
apiVersion: v1
kind: Service
metadata:
  name: wave-lv-example
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wave-lv-example
---
# Enable gzip compression
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wave-traefik-compress
spec:
  compress: { }
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wave-traefik-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.custd.com`, `www.dev.custd.com`)
      kind: Rule
      services:
        - name: wave-lv-example
          port: 80
      middlewares:
        - name: wave-traefik-compress
  tls:
    secretName: dev-wave-cert-prod-tls
